# mosaic

./: .dockerignore  .env.example  .gitignore  .http  .pre-commit-config.yaml  CLEANUP_REPORT.md  Dockerfile  Estado Real do Mosaic.md  MINI_DESIGN.md  README.md  REPORT.md  SIRIOS_MOSAIC_SPRINT_PLAN.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt  result.txt
app/: main.py
app/builder/: service.py
app/core/: messages.yaml  settings.py
app/executor/: service.py
app/extractors/: normalizers.py
app/formatter/: serializer.py
app/gateway/: router.py
app/infrastructure/: cache.py
app/observability/: logging.py  metrics.py
app/orchestrator/: __init__.py  cache.py  context_builder.py  models.py  planning.py  (+5 more)
docs/: ARCHITECTURE_OVERVIEW_SIRIOS_MOSAIC.md  DEVELOPING.md
observability/: loki-config.yaml  promtail-config.yml
scripts/: audit_columns.py
tests/: __init__.py  conftest.py  test_acceptance.py  test_ask_errors.py  test_builder.py  test_cache_parity.py  test_context_builder.py  test_end_to_end.py  test_entity_dividends.py  test_examples_acceptance.py  test_executor_real.py  test_extractors_isolation.py  test_formatter_br.py  test_integration_pg.py  test_planning_dates.py  test_registry.py  test_registry_validator.py  test_routing_ask_endpoint.py  test_scoring_intents.py  test_service_facade.py  test_settings_env.py  test_suffix_formatters.py  test_vocab_hybrid.py
tmp/: schema_inventory.json
tools/: augment_yaml_from_db_comments.py  cleanup_alias_redundant.py  diff_yaml_db.py  prune_yaml_by_db.py  snapshot_views_from_db.py
(+39 files in other folders)
